--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <div class="featured-text">
                 <p class="featured-inspired">Get inspired</p>
                     <hr width="90%">
-                <p id="inspiration">Wedding inspiration</p>    
+                <p id="inspiration">Welcome to our atelier</p>    
                 <p class="inspired"> Plan the wedding of your dreams with us! As a dedicated company, we provide wedding flowers and decorations of all kinds and for all tastes. </p>     
-                <button class="button-28" id="downButton" >Show more</button>
+                <button class="button-main" id="downButton" >See our products</button>
             </div>
             <div class="videoframe">
                 <video autoplay muted loop id="video-cemerica">
@@ -124,10 +124,10 @@
                         <img loading="lazy" class="present-img" alt="Bouquet" src="img/bouquet2.webp">
                     </div>
                     <div>   
-                        <img loading="lazy" class="present-img" alt="Bouquet" src="img/bouquet1.webp">
+                        <img loading="lazy" class="present-img" alt="Bouquet" src="img/bridesbouquete.jpg">
                     </div>
                     <div>   
-                        <img loading="lazy" class="present-img" alt="Bouquet" src="img/bouquet3.webp">
+                        <img loading="lazy" class="present-img" alt="Bouquet" src="img/bouquet4.JPG">
                     </div>
                 </div>
 
@@ -140,7 +140,7 @@
         </div>
 
         <div class="mySlides fade">
-            <div class="slideshow">
+            <div class="slide-card">
 
                 <article class="slide-card-nav">
                     <div class="content-card-head">
@@ -169,7 +169,7 @@
         </div>
 
         <div class="mySlides fade">
-            <div class="slideshow">
+            <div class="slide-card">
 
                 <article class="slide-card-nav">
                     <div class="content-card-head">
@@ -198,7 +198,7 @@
         </div>
 
         <div class="mySlides fade">
-            <div class="slideshow">
+            <div class="slide-card">
 
                 <article class="slide-card-nav">
                     <div class="content-card-head">
@@ -227,7 +227,7 @@
         </div>
 
         <div class="mySlides fade">
-            <div class="slideshow">
+            <div class="slide-card">
 
                 <article class="slide-card-nav">
                     <div class="content-card-head">
@@ -253,7 +253,7 @@
         </div>
 
         <div class="mySlides fade">
-            <div class="slideshow">
+            <div class="slide-card">
 
                 <article class="slide-card-nav">
                     <div class="content-card-head">
@@ -281,7 +281,7 @@
         </div>
 
         <div class="mySlides fade">
-            <div class="slideshow">
+            <div class="slide-card">
 
                 <article class="slide-card-nav">
                     <div class="content-card-head">
