--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -73,7 +73,7 @@
                     <hr width="90%">
                 <p id="inspiration">Our preset configurator</p>    
                 <p class="inspired">loremipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam reprehenderit culpa facere temporibus animi debitis iusto magni esse officia obcaecati, saepe ea a modi odio cumque, vitae accusantium. Officia, ipsa!</p>     
-                <button class="button-28" id="downButton" >Show more</button>
+                <button class="button-main" id="downButton" >Show more</button>
             </div>
             <div class="featuredImgFrame">
                 <img class="featuredImg" alt="Decoration" src="img/cardecoration3.webp">
@@ -370,11 +370,11 @@
 
 </footer>
 
-      <section class="boringInfo">
+    <section class="boringInfo">
         <a href="404.html">Privacy policy</a>
         <a href="404.html">Terms of use</a>
         <a href="404.html">Cookie policy</a>
-      </section>
+    </section>
 
     
 <script src="main.js"></script>
