--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -48,10 +48,13 @@
                 <li class="nav-item-desk">
                     <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
                 </li>
+
                 <div class="vl"></div>
+
                 <li class="nav-item-desk">
                     <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
                 </li>
+
                 <li class="nav-mobile">
                     <a class="nav-link"href="404.hmtl" class="nav-link">Bouquetes</a>
                 </li>
@@ -72,7 +75,7 @@
                 <p class="featured-inspired">Discover</p>
                     <hr width="90%">
                 <p id="inspiration">Our preset configurator</p>    
-                <p class="inspired">loremipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam reprehenderit culpa facere temporibus animi debitis iusto magni esse officia obcaecati, saepe ea a modi odio cumque, vitae accusantium. Officia, ipsa!</p>     
+                <p class="inspired">Welcome to our unique wedding configurator where you can choose from many options we are providing so your very special day will be exactly as you wish to be</p>     
                 <button class="button-main" id="downButton" >Show more</button>
             </div>
             <div class="featuredImgFrame">
