choose us, css errors, minor adj, submit button
fixed choose us section
deleted css mistakes
minor fixes onpreset part pictures
added submit funktionality

--- a/contact.html
+++ b/contact.html
@@ -163,15 +163,41 @@
             By contacting us, we will receive your customisation and then we
             will be able to give you a price estimate
           </p>
-          <input type="text" placeholder="Name" class="contactInput" /> <br />
-          <input type="text" placeholder="E-mail" class="contactInput" /> <br />
-          <input type="text" placeholder="Phone" class="contactInput" /> <br />
-          <input
-            type="text"
-            placeholder="Your message"
-            class="contactInput yourMessage"
-          /><br />
-          <button class="btn1-light contactButton">Contact</button>
+          <form
+            action="https://formsubmit.co/sosiso4ki64@gmail.com"
+            method="POST"
+          >
+            <input
+              type="text"
+              name="name"
+              placeholder="Name"
+              class="contactInput"
+            />
+            <br />
+            <input
+              type="text"
+              name="email"
+              placeholder="E-mail"
+              class="contactInput"
+            />
+            <br />
+            <input
+              type="text"
+              name="phone"
+              placeholder="Phone"
+              class="contactInput"
+            />
+            <br />
+            <input
+              type="text"
+              name="text"
+              placeholder="Your message"
+              class="contactInput yourMessage"
+            /><br />
+            <button type="submit" class="btn1-light contactButton">
+              Contact
+            </button>
+          </form>
         </section>
       </section>
     </section>
@@ -192,15 +218,41 @@
             By contacting us, we will receive your customisation and then we
             will be able to give you a price estimate
           </p>
-          <input type="text" placeholder="Name" class="contactInput" /> <br />
-          <input type="text" placeholder="E-mail" class="contactInput" /> <br />
-          <input type="text" placeholder="Phone" class="contactInput" /> <br />
-          <input
-            type="text"
-            placeholder="Your message"
-            class="contactInput yourMessage"
-          /><br />
-          <button class="btn1-light contactButton">Contact</button>
+          <form
+            action="https://formsubmit.co/sosiso4ki64@gmail.com"
+            method="POST"
+          >
+            <input
+              type="text"
+              name="Name"
+              placeholder="Name"
+              class="contactInput"
+            />
+            <br />
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="contactInput"
+            />
+            <br />
+            <input
+              type="text"
+              name="phone"
+              placeholder="Phone"
+              class="contactInput"
+            />
+            <br />
+            <input
+              type="text"
+              name="text"
+              placeholder="Your message"
+              class="contactInput yourMessage"
+            /><br />
+            <button type="submit" class="btn1-light contactButton">
+              Contact
+            </button>
+          </form>
         </section>
       </section>
       <section class="navigationButtonsMobileContact">
