--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <!-- choose us nav mobile-->
             <div class="chooseus-nav-mobile">
                 <div class="content-card-head">
-                    <p class="headstyle1">Why choose us</p>
+                    <p class="headstyle1 whyChooseUsFix">Why choose us</p>
                     <hr width="90%"> 
                 </div>
             </div>
@@ -381,6 +381,9 @@
 <!--choose us mobile-->
 
     <section class="chooseUsMobile">
+        <section>
+            <p class="headstyle1 chooseUsMissingHeading">Our mindset</p>
+        </section>
         <section class="chooseUsMobilePictures">
             <img loading="lazy" src="img/florist.webp" alt="Team" class="mindsetPicture1">
             <img loading="lazy" src="img/mindset.webp" alt="Process" class="mindsetPicture2">
@@ -396,6 +399,9 @@
     
 <!--contuinue with workplace here-->
     <section class="chooseUsMobile">
+        <section>
+            <p class="headstyle1 chooseUsMissingHeading">Our workplace</p>
+        </section>
         <section class="chooseUsMobilePictures">
             <img loading="lazy" src="img/workplace1.webp" alt="Flower farm" class="mindsetPicture1">
             <img loading="lazy" src="img/workplace2.webp" alt="Bakery" class="mindsetPicture2">
@@ -412,6 +418,9 @@
    
 <!--contuinue with partners here-->
 <section class="chooseUsMobile">
+    <section>
+        <p class="headstyle1 chooseUsMissingHeading">Our partners</p>
+    </section>
     <section class="chooseUsMobilePictures" >
         <img loading="lazy" src="img/bakery.webp" alt="Laura bakery" class="mindsetPicture1">
         <img loading="lazy" src="img/farm.webp" alt="Burina farm" class="mindsetPicture2">
