--- a/flower-availability.html
+++ b/flower-availability.html
@@ -65,14 +65,14 @@
 <div id="preset-container">
     <section>
       <div id="presetPreview">
-        <section class="preview-text">
+        <section class="featured-text">
           <p class="featured-inspired">Get inspired</p>
           <hr width="90%" />
           <p id="inspiration">Flower Availability</p>
           <p class="inspired">
             Because every season has its unique flowers, here you can see which are available in season your wedding is expected to take a place.
           </p>
-          <button class="button-28" id="downButton">Show more</button>
+          <button class="button-main" id="downButton">Show more</button>
         </section>
         <section class="presetSlideshow">
           <img class="mySlides2" alt="slideshow picture" src="img/flowers/summer4.jpg" />
