--- a/index.html
+++ b/index.html
@@ -550,17 +550,17 @@
     </div>
 
     <div class="footercontent">
-        <a href="404.hmtl"><p>Terms of use</p></a>
-        <a href="404.hmtl"><p>Cookies</p></a>
-        <a href="404.hmtl"><p>Privacy policy</p></a>
+        <a href=""><p>Terms of use</p></a>
+        <a href=""><p>Cookies</p></a>
+        <a href=""><p>Privacy policy</p></a>
     </div>
 
 </footer>
 
 <section class="boringInfo">
-    <a class="headstyle2" href="404.html">Privacy policy</a>
-    <a class="headstyle2" href="404.html">Terms of use</a>
-    <a class="headstyle2" href="404.html">Cookie policy</a>
+    <a class="headstyle2" href="">Privacy policy</a>
+    <a class="headstyle2" href="">Terms of use</a>
+    <a class="headstyle2" href="">Cookie policy</a>
 </section>
 
 <script defer src="main.js"></script>
