--- a/presetParts.html
+++ b/presetParts.html
@@ -82,7 +82,7 @@
     <div id="preset-container">
       <section>
         <div id="presetPreview">
-          <section class="preview-text">
+          <section class="featured-text">
             <p class="featured-inspired">Get inspired</p>
             <hr width="90%" />
             <p id="inspiration">Wedding inspiration</p>
@@ -90,7 +90,7 @@
               In this step you are able to go through every part of this program
               to see if it's the right one for you.
             </p>
-            <button class="button-28" id="downButton">Show more</button>
+            <button class="button-main" id="downButton">Show more</button>
           </section>
           <section class="presetSlideshow">
             <img
