another style update.

--- a/presetParts.html
+++ b/presetParts.html
@@ -269,13 +269,15 @@
         alt="Bridesmaids decoration"
       />
     </section>
+
     <section class="navigationButtonsDesktop">
-      <button class="btn1-light">
-        <a href="style-your-wedding.html">Previous step</a>
-      </button>
-      <button class="btn1-light">
-        <a href="flower-availability.html">Next step</a>
-      </button>
+      <a href="style-your-wedding.html">
+        <button class="btn1-light">Previous step</button>
+      </a>
+
+      <a href="flower-availability.html">
+        <button class="btn1-light">Next step</button>
+      </a>
     </section>
     <!-- MObile Version start MANGE TAK for carousel goes to https://www.youtube.com/watch?v=KtsVC_JRxCU&ab_channel=codefoxx-->
     <div class="carousel fadePreview"></div>
