--- a/contact.html
+++ b/contact.html
@@ -82,16 +82,16 @@
     <div id="preset-container">
       <section>
         <div id="presetPreview">
-          <section class="preview-text">
+          <section class="featured-text">
             <p class="featured-inspired">Discover</p>
             <hr width="90%" />
             <p id="inspiration">Configuration preview</p>
-            <p class="discoverPresetsText">
+            <p class="inspired">
               This is your last step to perfect wedding day. In this step you
               can see your configuration, here you can also choose to contact us
               so we can talk more about your requirements
             </p>
-            <button class="button-28" id="downButton">See my preset</button>
+            <button class="button-main" id="downButton">See my preset</button>
           </section>
           <section class="presetSlideshow">
             <img
@@ -147,9 +147,11 @@
         <p>Bridesmaids decorations</p>
         <p>Other decorations</p>
         <section class="navigationButtonsDesktopContact">
-          <button class="btn1-light">
-            <a href="style-your-wedding.html">Previous step</a>
-          </button>
+          
+        <a href="style-your-wedding.html">
+          <button class="btn1-light">Previous step</button>
+        </a>
+
         </section>
       </section>
       <section class="availableFlowersSlide">
