--- a/presetParts.html
+++ b/presetParts.html
@@ -86,7 +86,7 @@
             <p class="featured-inspired">Get inspired</p>
             <hr width="90%" />
             <p id="inspiration">Wedding inspiration</p>
-            <p class="discoverPresetsText">
+            <p class="inspired">
               In this step you are able to go through every part of this program
               to see if it's the right one for you.
             </p>
